2007-01-28    <tino@firebird.03.softkill.net>

	* syscap.h: added for conditional compiles

	* sock.h: sysfix.h added and TINO_F_ protoypes

	* sock_tool.h (tino_sock_wrap): moved from sock.h as it needs
	file.h

	* file.h (tino_file_stat, tino_file_lstat, tino_file_stat_fd):
	System Fixes for CYGWIN: uses new TINO_F_ and TINO_T_ defines

	* sysfix.h: sysfix_cygwin.h now included

	* sysfix_cygwin.h: added

2007-01-25    <tino@firebird.03.softkill.net>

	* alarm.h: added time_t to callback to reduce syscalls

	* sock.h (tino_sock_select_timeout): alarm_fn added
	(tino_sock_udp, tino_sock_new_pair, tino_sock_wrap): added

	* alarm.h (tino_alarm_run_pending): added

	* file.h (tino_file_dup2, tino_file_null): added

	* Makefile-test.sh: UNIT_TEST now works for C++, too (somehow)

2007-01-24    <tino@firebird.03.softkill.net>

	* getopt.h (tino_getopt_var_set_varg): made more generic (min, max)

	* main_file.h (tino_main_file): errflag added and moved into
	separate include

	* main.h (tino_main_set_error, tino_main_get_error): added

2007-01-23    <tino@firebird.03.softkill.net>

	* setuptino.sh:"cvs add" wasn't called on the "tino" directory

2007-01-22    <tino@firebird.03.softkill.net>

	* main_getini.h (tino_main_if): added

	* getini.h (tino_getini_varg): added

	* getopt.h (tino_getopt_hook): user parameter to hook added

	* .cvsignore.dist: added *.cvsigore* as I need this nearly quite
	too often =8-/

2007-01-18    <tino@firebird.03.softkill.net>

	* sock.h: include sys/select.h, sys/time.h and sys/types.h

2006-12-16    <tino@firebird.03.softkill.net>

	* debug.h (TINO_DP_array): added

	* array.h, array_slist.h: added

	* slist.h (tino_glist_first): typo corrected

2006-12-12    <tino@firebird.03.softkill.net>

	* main_getopt.h: added

	* proc.h (tino_wait_child_exact): now uses
	tino_wait_child_status_string

2006-11-15    <tino@firebird.03.softkill.net>

	* slist.h (tino_glist_destroy, tino_slist_free)