@@ -72,7 +72,10 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 # $Log$
-# Revision 1.33  2006-11-09 23:45:48  tino
+# Revision 1.34  2007-01-28 03:06:19  tino
+# diet fixes
+#
+# Revision 1.33  2006/11/09 23:45:48  tino
 # VERSION correction on files with dashes
 #
 # Revision 1.32  2006/10/04 00:00:32  tino
@@ -191,8 +194,9 @@ all:	$(SUBDIRS) $(PROGS)
 static:
 	[ -f diet.distignore~ ] || $(MAKE) clean
 	$(TOUCH) diet.distignore~
-	$(MAKE) -C diet
-	$(MAKE) CC="diet/tinodiet.sh --tinodiet"
+	[ ! -d diet ] || $(MAKE) -C diet diet
+	[ ! -d diet ] || $(MAKE) CC="$(PWD)/diet/tinodiet.sh --tinodiet"
+	[ -d diet ] || $(MAKE) CC="$(PWD)/tino/Makefile-diet.sh --tinodiet"
 
 # The latter MAKE fails if there is no tinolib.  This is normal!
 
